feat: cleaned up backend, added new features to frontend
